updated with worksheet for project

--- a/workbook_homework19.ipynb
+++ b/workbook_homework19.ipynb
@@ -20,25 +20,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "mnemonic = 'earn fragile garage daughter cinnamon embody uncle cruel ginger train pig tape'"
+    "import os\n",
+    "from web3 import Web3\n",
+    "from dotenv import load_dotenv\n",
+    "from web3.middleware import geth_poa_middleware\n",
+    "from eth_account import Account\n",
+    "\n",
+    "from pathlib import Path\n",
+    "from getpass import getpass"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "from bit import wif_to_key\n",
+    "\n",
+    "key = wif_to_key(\"slide surprise fit peace ugly episode ignore ozone oil foster noise mushroom gorilla vivid foot\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = './wallet/derive -g --mnemonic=\"slide surprise fit peace ugly episode ignore ozone oil foster noise mushroom gorilla vivid foot\" --format=json --cols=path,address,privkey,pubkey'"
+    "#mnemonic = os.getenv('MNEMONIC', 'slide surprise fit peace ugly episode ignore ozone oil foster noise mushroom gorilla vivid foot')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mnemonic = 'slide surprise fit peace ugly episode ignore ozone oil foster noise mushroom gorilla vivid foot'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = './wallet/derive -g --mnemonic=\"slide surprise fit peace ugly episode ignore ozone oil foster noise mushroom gorilla vivid foot\" --format=json --coin=btc --numderive=4  --cols=path,address,privkey,pubkey'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,14 +99,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "b'\\n[{\"path\":\"m\\\\/44\\'\\\\/0\\'\\\\/0\\'\\\\/0\\\\/0\",\"address\":\"1CnQ9XBafn27z9jEpNAg6mW4JjX2A8vDkk\",\"privkey\":\"KzRbRwqLgzcqyLa5wYzVcTv1gFDfGT8x3ggWrttiBBexjMTAWPPG\",\"pubkey\":\"03f077d2139da0101ab8ccd9d0078b923b00b22b95a62801a779529f803694ec15\"},{\"path\":\"m\\\\/44\\'\\\\/0\\'\\\\/0\\'\\\\/0\\\\/1\",\"address\":\"1Li6ciKqkLGTszibgFmGuKXo2yk5vXWKz4\",\"privkey\":\"L3dCf32j4owDB872EEXqWSpDcQoCGiq8Q2v3xgDJeNti8NS57Q6s\",\"pubkey\":\"021ed88f1dc3f2b26db3feadcf2b8dfbe8e39ca3925c57139016edffc03579b332\"},{\"path\":\"m\\\\/44\\'\\\\/0\\'\\\\/0\\'\\\\/0\\\\/2\",\"address\":\"1PUMxFo4NHiCubqLRMp2bJEAP6sSYsEprs\",\"privkey\":\"L24BDAvg7MY4obCFCMZL8mnW1Zk5FYzzAcko6h4RvzPY4evMkR4w\",\"pubkey\":\"02a0d69e4f2828111c1a101f0db9823a3e5d781c42dfa3eca3edef2e4be438c06e\"},{\"path\":\"m\\\\/44\\'\\\\/0\\'\\\\/0\\'\\\\/0\\\\/3\",\"address\":\"1JwHioXYKJFrnF1VwWVbeVKmpTwmyneYWv\",\"privkey\":\"KxQrvSQUve4hofpzk4FB8HhDq4D11FsYZa3h6c5nrAqJ6ULwds3f\",\"pubkey\":\"02f147b3862c5840ca617c5b4d7baa17a5b4e7e5788f456de9a7d15c5a62bdb9f6\"},{\"path\":\"m\\\\/44\\'\\\\/0\\'\\\\/0\\'\\\\/0\\\\/4\",\"address\":\"1BhQTujW14zk4zZyTEZrezjLRHCwPPkmbo\",\"privkey\":\"L21FLxHfmiZyWSyCBGSBekiQwMAtJxwBHZeZ4MEnVqZyFhku7UYy\",\"pubkey\":\"037329031b4fd7c6657b55df6658f7f37daa7c74eed1cb93de22b52c0443a37497\"},{\"path\":\"m\\\\/44\\'\\\\/0\\'\\\\/0\\'\\\\/0\\\\/5\",\"address\":\"18AcFDK5zvjGMGsgzvRfGaCjLH3z1jXDrt\",\"privkey\":\"L4zR1pfB39TZ85JyG1hQs5Zr1PtoifokSLYzmc6UD9Yyxq22HyLL\",\"pubkey\":\"03d1acbb8877b45619484d1400a3e535a364c6e0322ecab752e26b75dc23a1df73\"},{\"path\":\"m\\\\/44\\'\\\\/0\\'\\\\/0\\'\\\\/0\\\\/6\",\"address\":\"12C4Z71gvDDTPsxi3262CFRGUuAQGm3XAz\",\"privkey\":\"KycRV6fxo7icF89JD15YKZ2YF88CXSwa8T6EiJuuFRZg1mB4HPtP\",\"pubkey\":\"03ed40c54a062db5a4c3f103fdc143bb5e95478ad5855f7d33184223476639329d\"},{\"path\":\"m\\\\/44\\'\\\\/0\\'\\\\/0\\'\\\\/0\\\\/7\",\"address\":\"17LAKXNTuW1ThX6zBPQJiTzvhCCiztEtAf\",\"privkey\":\"L3eWEGmYNNaEhPbJUEnadVic744oMMiwKRkGE8Gvay8ihXvFCXpD\",\"pubkey\":\"024cc2a59efce45eb8ea8fd39afb5029866fbff18ec8642f3645d7d15d302e0b69\"},{\"path\":\"m\\\\/44\\'\\\\/0\\'\\\\/0\\'\\\\/0\\\\/8\",\"address\":\"1HQVNHVdSqmkatevMHv3wnCC4fugobDurG\",\"privkey\":\"L3tuBPY5REvZ4qyA7NUxAbbKS2Uu7tx8ZoQTcKkyiKySXsEnqDjx\",\"pubkey\":\"0291ff604b93255d02da41d3395879608fd283fc4bb4694097c5f4f225880f1e8a\"},{\"path\":\"m\\\\/44\\'\\\\/0\\'\\\\/0\\'\\\\/0\\\\/9\",\"address\":\"1LiZ3FhAR1mR5xN2McBgFZfEwbWtBXrQa4\",\"privkey\":\"L58J5VGoCWWm8cEjgiefBXvbkEShaJ7Ko6zB5eb8T56kfRzwsit6\",\"pubkey\":\"035bb3b28200efae84f920057fccc710e46185508483130994600472f26051c0fe\"}]'\n"
+      "b'\\n[{\"path\":\"m\\\\/44\\'\\\\/0\\'\\\\/0\\'\\\\/0\\\\/0\",\"address\":\"1CnQ9XBafn27z9jEpNAg6mW4JjX2A8vDkk\",\"privkey\":\"KzRbRwqLgzcqyLa5wYzVcTv1gFDfGT8x3ggWrttiBBexjMTAWPPG\",\"pubkey\":\"03f077d2139da0101ab8ccd9d0078b923b00b22b95a62801a779529f803694ec15\"},{\"path\":\"m\\\\/44\\'\\\\/0\\'\\\\/0\\'\\\\/0\\\\/1\",\"address\":\"1Li6ciKqkLGTszibgFmGuKXo2yk5vXWKz4\",\"privkey\":\"L3dCf32j4owDB872EEXqWSpDcQoCGiq8Q2v3xgDJeNti8NS57Q6s\",\"pubkey\":\"021ed88f1dc3f2b26db3feadcf2b8dfbe8e39ca3925c57139016edffc03579b332\"},{\"path\":\"m\\\\/44\\'\\\\/0\\'\\\\/0\\'\\\\/0\\\\/2\",\"address\":\"1PUMxFo4NHiCubqLRMp2bJEAP6sSYsEprs\",\"privkey\":\"L24BDAvg7MY4obCFCMZL8mnW1Zk5FYzzAcko6h4RvzPY4evMkR4w\",\"pubkey\":\"02a0d69e4f2828111c1a101f0db9823a3e5d781c42dfa3eca3edef2e4be438c06e\"},{\"path\":\"m\\\\/44\\'\\\\/0\\'\\\\/0\\'\\\\/0\\\\/3\",\"address\":\"1JwHioXYKJFrnF1VwWVbeVKmpTwmyneYWv\",\"privkey\":\"KxQrvSQUve4hofpzk4FB8HhDq4D11FsYZa3h6c5nrAqJ6ULwds3f\",\"pubkey\":\"02f147b3862c5840ca617c5b4d7baa17a5b4e7e5788f456de9a7d15c5a62bdb9f6\"}]'\n"
      ]
     }
    ],
@@ -82,14 +116,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "b'\\n[{\"path\":\"m\\\\/44\\'\\\\/0\\'\\\\/0\\'\\\\/0\\\\/0\",\"address\":\"1CnQ9XBafn27z9jEpNAg6mW4JjX2A8vDkk\",\"privkey\":\"KzRbRwqLgzcqyLa5wYzVcTv1gFDfGT8x3ggWrttiBBexjMTAWPPG\",\"pubkey\":\"03f077d2139da0101ab8ccd9d0078b923b00b22b95a62801a779529f803694ec15\"},{\"path\":\"m\\\\/44\\'\\\\/0\\'\\\\/0\\'\\\\/0\\\\/1\",\"address\":\"1Li6ciKqkLGTszibgFmGuKXo2yk5vXWKz4\",\"privkey\":\"L3dCf32j4owDB872EEXqWSpDcQoCGiq8Q2v3xgDJeNti8NS57Q6s\",\"pubkey\":\"021ed88f1dc3f2b26db3feadcf2b8dfbe8e39ca3925c57139016edffc03579b332\"},{\"path\":\"m\\\\/44\\'\\\\/0\\'\\\\/0\\'\\\\/0\\\\/2\",\"address\":\"1PUMxFo4NHiCubqLRMp2bJEAP6sSYsEprs\",\"privkey\":\"L24BDAvg7MY4obCFCMZL8mnW1Zk5FYzzAcko6h4RvzPY4evMkR4w\",\"pubkey\":\"02a0d69e4f2828111c1a101f0db9823a3e5d781c42dfa3eca3edef2e4be438c06e\"},{\"path\":\"m\\\\/44\\'\\\\/0\\'\\\\/0\\'\\\\/0\\\\/3\",\"address\":\"1JwHioXYKJFrnF1VwWVbeVKmpTwmyneYWv\",\"privkey\":\"KxQrvSQUve4hofpzk4FB8HhDq4D11FsYZa3h6c5nrAqJ6ULwds3f\",\"pubkey\":\"02f147b3862c5840ca617c5b4d7baa17a5b4e7e5788f456de9a7d15c5a62bdb9f6\"}]'"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'path': \"m/44'/0'/0'/0/0\", 'address': '1CnQ9XBafn27z9jEpNAg6mW4JjX2A8vDkk', 'privkey': 'KzRbRwqLgzcqyLa5wYzVcTv1gFDfGT8x3ggWrttiBBexjMTAWPPG', 'pubkey': '03f077d2139da0101ab8ccd9d0078b923b00b22b95a62801a779529f803694ec15'}, {'path': \"m/44'/0'/0'/0/1\", 'address': '1Li6ciKqkLGTszibgFmGuKXo2yk5vXWKz4', 'privkey': 'L3dCf32j4owDB872EEXqWSpDcQoCGiq8Q2v3xgDJeNti8NS57Q6s', 'pubkey': '021ed88f1dc3f2b26db3feadcf2b8dfbe8e39ca3925c57139016edffc03579b332'}, {'path': \"m/44'/0'/0'/0/2\", 'address': '1PUMxFo4NHiCubqLRMp2bJEAP6sSYsEprs', 'privkey': 'L24BDAvg7MY4obCFCMZL8mnW1Zk5FYzzAcko6h4RvzPY4evMkR4w', 'pubkey': '02a0d69e4f2828111c1a101f0db9823a3e5d781c42dfa3eca3edef2e4be438c06e'}, {'path': \"m/44'/0'/0'/0/3\", 'address': '1JwHioXYKJFrnF1VwWVbeVKmpTwmyneYWv', 'privkey': 'KxQrvSQUve4hofpzk4FB8HhDq4D11FsYZa3h6c5nrAqJ6ULwds3f', 'pubkey': '02f147b3862c5840ca617c5b4d7baa17a5b4e7e5788f456de9a7d15c5a62bdb9f6'}, {'path': \"m/44'/0'/0'/0/4\", 'address': '1BhQTujW14zk4zZyTEZrezjLRHCwPPkmbo', 'privkey': 'L21FLxHfmiZyWSyCBGSBekiQwMAtJxwBHZeZ4MEnVqZyFhku7UYy', 'pubkey': '037329031b4fd7c6657b55df6658f7f37daa7c74eed1cb93de22b52c0443a37497'}, {'path': \"m/44'/0'/0'/0/5\", 'address': '18AcFDK5zvjGMGsgzvRfGaCjLH3z1jXDrt', 'privkey': 'L4zR1pfB39TZ85JyG1hQs5Zr1PtoifokSLYzmc6UD9Yyxq22HyLL', 'pubkey': '03d1acbb8877b45619484d1400a3e535a364c6e0322ecab752e26b75dc23a1df73'}, {'path': \"m/44'/0'/0'/0/6\", 'address': '12C4Z71gvDDTPsxi3262CFRGUuAQGm3XAz', 'privkey': 'KycRV6fxo7icF89JD15YKZ2YF88CXSwa8T6EiJuuFRZg1mB4HPtP', 'pubkey': '03ed40c54a062db5a4c3f103fdc143bb5e95478ad5855f7d33184223476639329d'}, {'path': \"m/44'/0'/0'/0/7\", 'address': '17LAKXNTuW1ThX6zBPQJiTzvhCCiztEtAf', 'privkey': 'L3eWEGmYNNaEhPbJUEnadVic744oMMiwKRkGE8Gvay8ihXvFCXpD', 'pubkey': '024cc2a59efce45eb8ea8fd39afb5029866fbff18ec8642f3645d7d15d302e0b69'}, {'path': \"m/44'/0'/0'/0/8\", 'address': '1HQVNHVdSqmkatevMHv3wnCC4fugobDurG', 'privkey': 'L3tuBPY5REvZ4qyA7NUxAbbKS2Uu7tx8ZoQTcKkyiKySXsEnqDjx', 'pubkey': '0291ff604b93255d02da41d3395879608fd283fc4bb4694097c5f4f225880f1e8a'}, {'path': \"m/44'/0'/0'/0/9\", 'address': '1LiZ3FhAR1mR5xN2McBgFZfEwbWtBXrQa4', 'privkey': 'L58J5VGoCWWm8cEjgiefBXvbkEShaJ7Ko6zB5eb8T56kfRzwsit6', 'pubkey': '035bb3b28200efae84f920057fccc710e46185508483130994600472f26051c0fe'}]\n"
+      "[{'path': \"m/44'/0'/0'/0/0\", 'address': '1CnQ9XBafn27z9jEpNAg6mW4JjX2A8vDkk', 'privkey': 'KzRbRwqLgzcqyLa5wYzVcTv1gFDfGT8x3ggWrttiBBexjMTAWPPG', 'pubkey': '03f077d2139da0101ab8ccd9d0078b923b00b22b95a62801a779529f803694ec15'}, {'path': \"m/44'/0'/0'/0/1\", 'address': '1Li6ciKqkLGTszibgFmGuKXo2yk5vXWKz4', 'privkey': 'L3dCf32j4owDB872EEXqWSpDcQoCGiq8Q2v3xgDJeNti8NS57Q6s', 'pubkey': '021ed88f1dc3f2b26db3feadcf2b8dfbe8e39ca3925c57139016edffc03579b332'}, {'path': \"m/44'/0'/0'/0/2\", 'address': '1PUMxFo4NHiCubqLRMp2bJEAP6sSYsEprs', 'privkey': 'L24BDAvg7MY4obCFCMZL8mnW1Zk5FYzzAcko6h4RvzPY4evMkR4w', 'pubkey': '02a0d69e4f2828111c1a101f0db9823a3e5d781c42dfa3eca3edef2e4be438c06e'}, {'path': \"m/44'/0'/0'/0/3\", 'address': '1JwHioXYKJFrnF1VwWVbeVKmpTwmyneYWv', 'privkey': 'KxQrvSQUve4hofpzk4FB8HhDq4D11FsYZa3h6c5nrAqJ6ULwds3f', 'pubkey': '02f147b3862c5840ca617c5b4d7baa17a5b4e7e5788f456de9a7d15c5a62bdb9f6'}]\n"
      ]
     }
    ],
@@ -100,30 +154,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'path': \"m/44'/0'/0'/0/4\",\n",
-       " 'address': '1BhQTujW14zk4zZyTEZrezjLRHCwPPkmbo',\n",
-       " 'privkey': 'L21FLxHfmiZyWSyCBGSBekiQwMAtJxwBHZeZ4MEnVqZyFhku7UYy',\n",
-       " 'pubkey': '037329031b4fd7c6657b55df6658f7f37daa7c74eed1cb93de22b52c0443a37497'}"
+       "{'path': \"m/44'/0'/0'/0/3\",\n",
+       " 'address': '1JwHioXYKJFrnF1VwWVbeVKmpTwmyneYWv',\n",
+       " 'privkey': 'KxQrvSQUve4hofpzk4FB8HhDq4D11FsYZa3h6c5nrAqJ6ULwds3f',\n",
+       " 'pubkey': '02f147b3862c5840ca617c5b4d7baa17a5b4e7e5788f456de9a7d15c5a62bdb9f6'}"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "accounts[4]"
+    "accounts[3]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,22 +186,169 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def derive_wallets(mnenomicvariable, coinname, num):\n",
+    "    x = './wallet/derive -g --mnemonic=\"' + mnenomicvariable + '\" --format=json --coin=' + coinname + ' --numderive='+ str(num) + ' --cols=path,index,address,privkey,pubkey'\n",
+    "    p = subprocess.Popen(x, stdout=subprocess.PIPE, shell=True)\n",
+    "    (output, err) = p.communicate()\n",
+    "    p_status = p.wait()\n",
+    "    accounts = json.loads(output)\n",
+    "    return accounts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'keys' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-61-f843c38c74e1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkeys\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'keys' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "'KxQrvSQUve4hofpzk4FB8HhDq4D11FsYZa3h6c5nrAqJ6ULwds3f'"
+      ]
+     },
+     "execution_count": 124,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "derive_wallets(mnemonic, 'btc', 4)[3]['privkey']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 186,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "coins = {'btc': derive_wallets(mnemonic, 'btc', 4),\n",
+    "    'eth': derive_wallets(mnemonic, 'eth', 4),\n",
+    "    'btctest': derive_wallets(mnemonic, 'btc-test', 4)}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 182,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#p1 = coins()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 183,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#p1['btc'][0]['privkey']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 187,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'KzRbRwqLgzcqyLa5wYzVcTv1gFDfGT8x3ggWrttiBBexjMTAWPPG'"
+      ]
+     },
+     "execution_count": 187,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "coins['btc'][0]['privkey']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 196,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from bit import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 197,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def priv_key_to_account(coin, priv_key):\n",
+    "    if coin == 'eth':\n",
+    "        return Account.privateKeyToAccount(priv_key)\n",
+    "    elif coin == 'btctest':\n",
+    "        return PrivateKeyTestnet(priv_key)\n",
+    "#    For ETH, return Account.privateKeyToAccount(priv_key)\n",
+    "#    For BTCTEST, return PrivateKeyTestnet(priv_key)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 195,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<eth_account.signers.local.LocalAccount at 0x108e8f890>"
+      ]
+     },
+     "execution_count": 195,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "priv_key_to_account('eth', coins['eth'][0]['privkey'] )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 198,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<PrivateKeyTestnet: mqKhFUyEY6MKyreiZ316DxxghAUqomgFLU>"
+      ]
+     },
+     "execution_count": 198,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "priv_key_to_account('btctest', coins['btctest'][0]['privkey'] )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_tx:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def send_tx: "
+   ]
   },
   {
    "cell_type": "code",
@@ -155,6 +356,47 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, we need to use `bit` and `web3.py` to leverage the keys we've got in the `coins` object.\n",
+    "You will need to create three more functions:\n",
+    "\n",
+    "- `create_tx` -- this will create the raw, unsigned transaction that contains all metadata needed to transact.\n",
+    "  This function needs the following parameters:\n",
+    "\n",
+    "  - `coin` -- the coin type (defined in `constants.py`).\n",
+    "  - `account` -- the account object from `priv_key_to_account`.\n",
+    "  - `to` -- the recipient address.\n",
+    "  - `amount` -- the amount of the coin to send.\n",
+    "\n",
+    "  You will need to check the coin, then return one of the following functions based on the library:\n",
+    "\n",
+    "  - For `ETH`, return an object containing `to`, `from`, `value`, `gas`, `gasPrice`, `nonce`, and `chainID`.\n",
+    "    Make sure to calculate all of these values properly using `web3.py`!\n",
+    "  - For `BTCTEST`, return `PrivateKeyTestnet.prepare_transaction(account.address, [(to, amount, BTC)])`\n",
+    "\n",
+    "- `send_tx` -- this will call `create_tx`, sign the transaction, then send it to the designated network.\n",
+    "  This function needs the following parameters:\n",
+    "\n",
+    "  - `coin` -- the coin type (defined in `constants.py`).\n",
+    "  - `account` -- the account object from `priv_key_to_account`.\n",
+    "  - `to` -- the recipient address.\n",
+    "  - `amount` -- the amount of the coin to send.\n",
+    "\n",
+    "  You may notice these are the exact same parameters as `create_tx`. `send_tx` will call `create_tx`, so it needs\n",
+    "  all of this information available.\n",
+    "\n",
+    "  You will need to check the coin, then create a `raw_tx` object by calling `create_tx`. Then, you will need to sign\n",
+    "  the `raw_tx` using `bit` or `web3.py` (hint: the account objects have a sign transaction function within).\n",
+    "\n",
+    "  Once you've signed the transaction, you will need to send it to the designated blockchain network.\n",
+    "\n",
+    "  - For `ETH`, return `w3.eth.sendRawTransaction(signed.rawTransaction)`\n",
+    "  - For `BTCTEST`, return `NetworkAPI.broadcast_tx_testnet(signed)`"
+   ]
   },
   {
    "cell_type": "code",
