--- a/workbook_homework19.ipynb
+++ b/workbook_homework19.ipynb
@@ -20,12 +20,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "from web3 import Web3\n",
+    "from web3 import Web3 as w3\n",
     "from dotenv import load_dotenv\n",
     "from web3.middleware import geth_poa_middleware\n",
     "from eth_account import Account\n",
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +125,7 @@
        "b'\\n[{\"path\":\"m\\\\/44\\'\\\\/0\\'\\\\/0\\'\\\\/0\\\\/0\",\"address\":\"1CnQ9XBafn27z9jEpNAg6mW4JjX2A8vDkk\",\"privkey\":\"KzRbRwqLgzcqyLa5wYzVcTv1gFDfGT8x3ggWrttiBBexjMTAWPPG\",\"pubkey\":\"03f077d2139da0101ab8ccd9d0078b923b00b22b95a62801a779529f803694ec15\"},{\"path\":\"m\\\\/44\\'\\\\/0\\'\\\\/0\\'\\\\/0\\\\/1\",\"address\":\"1Li6ciKqkLGTszibgFmGuKXo2yk5vXWKz4\",\"privkey\":\"L3dCf32j4owDB872EEXqWSpDcQoCGiq8Q2v3xgDJeNti8NS57Q6s\",\"pubkey\":\"021ed88f1dc3f2b26db3feadcf2b8dfbe8e39ca3925c57139016edffc03579b332\"},{\"path\":\"m\\\\/44\\'\\\\/0\\'\\\\/0\\'\\\\/0\\\\/2\",\"address\":\"1PUMxFo4NHiCubqLRMp2bJEAP6sSYsEprs\",\"privkey\":\"L24BDAvg7MY4obCFCMZL8mnW1Zk5FYzzAcko6h4RvzPY4evMkR4w\",\"pubkey\":\"02a0d69e4f2828111c1a101f0db9823a3e5d781c42dfa3eca3edef2e4be438c06e\"},{\"path\":\"m\\\\/44\\'\\\\/0\\'\\\\/0\\'\\\\/0\\\\/3\",\"address\":\"1JwHioXYKJFrnF1VwWVbeVKmpTwmyneYWv\",\"privkey\":\"KxQrvSQUve4hofpzk4FB8HhDq4D11FsYZa3h6c5nrAqJ6ULwds3f\",\"pubkey\":\"02f147b3862c5840ca617c5b4d7baa17a5b4e7e5788f456de9a7d15c5a62bdb9f6\"}]'"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +166,7 @@
        " 'pubkey': '02f147b3862c5840ca617c5b4d7baa17a5b4e7e5788f456de9a7d15c5a62bdb9f6'}"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
        "'KxQrvSQUve4hofpzk4FB8HhDq4D11FsYZa3h6c5nrAqJ6ULwds3f'"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,18 +221,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
     "coins = {'btc': derive_wallets(mnemonic, 'btc', 4),\n",
     "    'eth': derive_wallets(mnemonic, 'eth', 4),\n",
-    "    'btctest': derive_wallets(mnemonic, 'btc-test', 4)}"
+    "    'btc-test': derive_wallets(mnemonic, 'btc-test', 4)}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +259,7 @@
        "'KzRbRwqLgzcqyLa5wYzVcTv1gFDfGT8x3ggWrttiBBexjMTAWPPG'"
       ]
      },
-     "execution_count": 187,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,14 +279,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
+    "account = {}\n",
     "def priv_key_to_account(coin, priv_key):\n",
     "    if coin == 'eth':\n",
     "        return Account.privateKeyToAccount(priv_key)\n",
-    "    elif coin == 'btctest':\n",
+    "    elif coin == 'btc-test' or 'btc':\n",
     "        return PrivateKeyTestnet(priv_key)\n",
     "#    For ETH, return Account.privateKeyToAccount(priv_key)\n",
     "#    For BTCTEST, return PrivateKeyTestnet(priv_key)"
@@ -294,16 +295,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<eth_account.signers.local.LocalAccount at 0x108e8f890>"
+       "<eth_account.signers.local.LocalAccount at 0x108d47110>"
       ]
      },
-     "execution_count": 195,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -323,39 +324,84 @@
        "<PrivateKeyTestnet: mqKhFUyEY6MKyreiZ316DxxghAUqomgFLU>"
       ]
      },
-     "execution_count": 198,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "priv_key_to_account('btctest', coins['btctest'][0]['privkey'] )"
+    "priv_key_to_account('btc-test', coins['btc-test'][0]['privkey'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def create_tx:"
+    "def create_tx(coin, account, recipient, amount):\n",
+    "    if coin == 'eth':\n",
+    "        gasEstimate = w3.eth.estimateGas(\n",
+    "            {\"from\": account.address, \"to\": recipient, \"value\": amount}\n",
+    "        )\n",
+    "        return {\n",
+    "            \"from\": account.address,\n",
+    "            \"to\": recipient,\n",
+    "            \"value\": amount,\n",
+    "            \"gasPrice\": w3.eth.gasPrice,\n",
+    "            \"gas\": gasEstimate,\n",
+    "            \"nonce\": w3.eth.getTransactionCount(account.address),\n",
+    "        }\n",
+    "    if coin == 'btc-test' or 'btc':\n",
+    "        return PrivateKeyTestnet.prepare_transaction(account.address, [(recipient, amount, coin)])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 111,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "unexpected EOF while parsing (<ipython-input-111-562b73046c6e>, line 8)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-111-562b73046c6e>\"\u001b[0;36m, line \u001b[0;32m8\u001b[0m\n\u001b[0;31m    elif coin == 'btc' or 'btc-test':\u001b[0m\n\u001b[0m                                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
+     ]
+    }
+   ],
    "source": [
-    "def send_tx: "
+    "def send_tx(account, recipient, amount):\n",
+    "    if coin == 'eth':\n",
+    "        tx = create_raw_tx(account, recipient, amount)\n",
+    "        signed_tx = account.sign_transaction(tx)\n",
+    "        result = w3.eth.sendRawTransaction(signed_tx.rawTransaction)\n",
+    "        print(result.hex())\n",
+    "        return result.hex()\n",
+    "    elif coin == 'btc' or 'btc-test':"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 114,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "type object 'Web3' has no attribute 'eth'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-114-149d80636d4b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mcreate_tx\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'eth'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpriv_key_to_account\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'eth'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcoins\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'eth'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'privkey'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'someone'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-113-c46b7f098973>\u001b[0m in \u001b[0;36mcreate_tx\u001b[0;34m(coin, account, recipient, amount)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mcreate_tx\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcoin\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maccount\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrecipient\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mamount\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mcoin\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'eth'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m         gasEstimate = w3.eth.estimateGas(\n\u001b[0m\u001b[1;32m      4\u001b[0m             \u001b[0;34m{\u001b[0m\u001b[0;34m\"from\"\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0maccount\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0maddress\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"to\"\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mrecipient\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"value\"\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mamount\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m         )\n",
+      "\u001b[0;31mAttributeError\u001b[0m: type object 'Web3' has no attribute 'eth'"
+     ]
+    }
+   ],
+   "source": [
+    "create_tx('eth', priv_key_to_account('eth', coins['eth'][0]['privkey']), 'someone', 0)"
+   ]
   },
   {
    "cell_type": "markdown",
