updated functions for btc and btc-test

--- a/workbook_homework19.ipynb
+++ b/workbook_homework19.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +125,7 @@
        "b'\\n[{\"path\":\"m\\\\/44\\'\\\\/0\\'\\\\/0\\'\\\\/0\\\\/0\",\"address\":\"1CnQ9XBafn27z9jEpNAg6mW4JjX2A8vDkk\",\"privkey\":\"KzRbRwqLgzcqyLa5wYzVcTv1gFDfGT8x3ggWrttiBBexjMTAWPPG\",\"pubkey\":\"03f077d2139da0101ab8ccd9d0078b923b00b22b95a62801a779529f803694ec15\"},{\"path\":\"m\\\\/44\\'\\\\/0\\'\\\\/0\\'\\\\/0\\\\/1\",\"address\":\"1Li6ciKqkLGTszibgFmGuKXo2yk5vXWKz4\",\"privkey\":\"L3dCf32j4owDB872EEXqWSpDcQoCGiq8Q2v3xgDJeNti8NS57Q6s\",\"pubkey\":\"021ed88f1dc3f2b26db3feadcf2b8dfbe8e39ca3925c57139016edffc03579b332\"},{\"path\":\"m\\\\/44\\'\\\\/0\\'\\\\/0\\'\\\\/0\\\\/2\",\"address\":\"1PUMxFo4NHiCubqLRMp2bJEAP6sSYsEprs\",\"privkey\":\"L24BDAvg7MY4obCFCMZL8mnW1Zk5FYzzAcko6h4RvzPY4evMkR4w\",\"pubkey\":\"02a0d69e4f2828111c1a101f0db9823a3e5d781c42dfa3eca3edef2e4be438c06e\"},{\"path\":\"m\\\\/44\\'\\\\/0\\'\\\\/0\\'\\\\/0\\\\/3\",\"address\":\"1JwHioXYKJFrnF1VwWVbeVKmpTwmyneYWv\",\"privkey\":\"KxQrvSQUve4hofpzk4FB8HhDq4D11FsYZa3h6c5nrAqJ6ULwds3f\",\"pubkey\":\"02f147b3862c5840ca617c5b4d7baa17a5b4e7e5788f456de9a7d15c5a62bdb9f6\"}]'"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +166,7 @@
        " 'pubkey': '02f147b3862c5840ca617c5b4d7baa17a5b4e7e5788f456de9a7d15c5a62bdb9f6'}"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
        "'KxQrvSQUve4hofpzk4FB8HhDq4D11FsYZa3h6c5nrAqJ6ULwds3f'"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +259,7 @@
        "'KzRbRwqLgzcqyLa5wYzVcTv1gFDfGT8x3ggWrttiBBexjMTAWPPG'"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,16 +295,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<eth_account.signers.local.LocalAccount at 0x108d47110>"
+       "<eth_account.signers.local.LocalAccount at 0x109f6d110>"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -324,7 +324,7 @@
        "<PrivateKeyTestnet: mqKhFUyEY6MKyreiZ316DxxghAUqomgFLU>"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,24 +352,15 @@
     "            \"gas\": gasEstimate,\n",
     "            \"nonce\": w3.eth.getTransactionCount(account.address),\n",
     "        }\n",
-    "    if coin == 'btc-test' or 'btc':\n",
-    "        return PrivateKeyTestnet.prepare_transaction(account.address, [(recipient, amount, coin)])"
+    "    elif coin == 'btc-test' or 'btc':\n",
+    "        return PrivateKeyTestnet.prepare_transaction(account.address, [(recipient, amount, 'btc')])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "unexpected EOF while parsing (<ipython-input-111-562b73046c6e>, line 8)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-111-562b73046c6e>\"\u001b[0;36m, line \u001b[0;32m8\u001b[0m\n\u001b[0;31m    elif coin == 'btc' or 'btc-test':\u001b[0m\n\u001b[0m                                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def send_tx(account, recipient, amount):\n",
     "    if coin == 'eth':\n",
@@ -378,29 +369,31 @@
     "        result = w3.eth.sendRawTransaction(signed_tx.rawTransaction)\n",
     "        print(result.hex())\n",
     "        return result.hex()\n",
-    "    elif coin == 'btc' or 'btc-test':"
+    "#    elif coin == 'btc' or 'btc-test':"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "type object 'Web3' has no attribute 'eth'",
+     "ename": "ConnectionError",
+     "evalue": "All APIs are unreachable.",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-114-149d80636d4b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mcreate_tx\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'eth'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpriv_key_to_account\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'eth'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcoins\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'eth'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'privkey'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'someone'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-113-c46b7f098973>\u001b[0m in \u001b[0;36mcreate_tx\u001b[0;34m(coin, account, recipient, amount)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mcreate_tx\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcoin\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maccount\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrecipient\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mamount\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mcoin\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'eth'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m         gasEstimate = w3.eth.estimateGas(\n\u001b[0m\u001b[1;32m      4\u001b[0m             \u001b[0;34m{\u001b[0m\u001b[0;34m\"from\"\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0maccount\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0maddress\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"to\"\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mrecipient\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"value\"\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mamount\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m         )\n",
-      "\u001b[0;31mAttributeError\u001b[0m: type object 'Web3' has no attribute 'eth'"
+      "\u001b[0;31mConnectionError\u001b[0m                           Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-38-4f65485c6cb2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mcreate_tx\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'btc-test'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpriv_key_to_account\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'btc-test'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcoins\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'btc-test'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'privkey'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'someone'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-36-81e4a3fe43e6>\u001b[0m in \u001b[0;36mcreate_tx\u001b[0;34m(coin, account, recipient, amount)\u001b[0m\n\u001b[1;32m     13\u001b[0m         }\n\u001b[1;32m     14\u001b[0m     \u001b[0;32melif\u001b[0m \u001b[0mcoin\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'btc-test'\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0;34m'btc'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 15\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mPrivateKeyTestnet\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mprepare_transaction\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0maccount\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0maddress\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrecipient\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mamount\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'btc'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/opt/anaconda3/lib/python3.7/site-packages/bit/wallet.py\u001b[0m in \u001b[0;36mprepare_transaction\u001b[0;34m(cls, address, outputs, compressed, fee, absolute_fee, leftover, combine, message, unspents)\u001b[0m\n\u001b[1;32m    768\u001b[0m         \"\"\"\n\u001b[1;32m    769\u001b[0m         unspents, outputs = sanitize_tx_data(\n\u001b[0;32m--> 770\u001b[0;31m             \u001b[0munspents\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0mNetworkAPI\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_unspent_testnet\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0maddress\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    771\u001b[0m             \u001b[0moutputs\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    772\u001b[0m             \u001b[0mfee\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0mget_fee_cached\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/opt/anaconda3/lib/python3.7/site-packages/bit/network/services.py\u001b[0m in \u001b[0;36mget_unspent_testnet\u001b[0;34m(cls, address)\u001b[0m\n\u001b[1;32m    631\u001b[0m                 \u001b[0;32mpass\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    632\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 633\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mConnectionError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'All APIs are unreachable.'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    634\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    635\u001b[0m     \u001b[0;34m@\u001b[0m\u001b[0mclassmethod\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mConnectionError\u001b[0m: All APIs are unreachable."
      ]
     }
    ],
    "source": [
-    "create_tx('eth', priv_key_to_account('eth', coins['eth'][0]['privkey']), 'someone', 0)"
+    "create_tx('btc-test', priv_key_to_account('btc-test', coins['btc-test'][0]['privkey']), 'someone', 0)"
    ]
   },
   {
@@ -443,6 +436,20 @@
     "  - For `ETH`, return `w3.eth.sendRawTransaction(signed.rawTransaction)`\n",
     "  - For `BTCTEST`, return `NetworkAPI.broadcast_tx_testnet(signed)`"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
